# SatisfactoryMod.Net

./: .gitignore  .gitmodules  README.md  SatisfactoryMod.Net.sln
SatisfactoryMod.Net/: NLog.config  Plugin.cs  PluginWrapper.cs  SatisfactoryMod.Net.csproj
SatisfactoryMod.Net.Example/: ExampleMod.cs  SatisfactoryMod.Net.Example.csproj
SatisfactoryMod.Net/Logging/Common/: BaseLogger.cs  ILogger.cs  LogLevel.cs
SatisfactoryMod.Net/Logging/LogProvider/: NLogLogger.cs
SatisfactoryMod.Net/Properties/: launchSettings.json
SatisfactoryMod.Net/Scripting/: Context.cs  IMod.cs
dotnet-wrapper/: CMakeLists.txt  ClrHost.cpp  ClrHost.h  ModEvents.cpp  ModEvents.h  ModInfo.cpp  ModInfo.h  dotnet-wrapper.cpp  dotnet-wrapper.vcxproj  dotnet-wrapper.vcxproj.filters
dotnet-wrapper/include/: ClrHost.h  DotNetWrapper.h  ModInfo.h
dotnet-wrapper/src/: CMakeLists.txt  ClrHost.cpp  DotNetWrapper.cpp  ModInfo.cpp
